# cloudtile

./: .bumpversion.cfg  .coveragerc  .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  app.py  cdk.json  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
src/: Dockerfile
src/cloudtile/: __main__.py  converter.py  ecs.py  geofile.py  s3.py  tiles_config.yaml  tippecanoe.py  tippecanoe.yaml
src/cloudtile/cdk/: cloudtile_stack.py
src/cloudtile/cli/: __init__.py  parsers.py
tests/: test_cli.py  test_cloudtile.py  test_converter.py  test_ecs.py  test_geofile.py  test_parsers.py  test_s3.py  test_tippecanoe.py
